@@ -5,11 +5,12 @@ module God
     attr_accessor :server
     
     # api
-    attr_accessor :watches
+    attr_accessor :watches, :groups
     
     # Create a new instance that is ready for use by a configuration file
     def initialize(options = {})
       self.watches = {}
+      self.groups = {}
       self.server  = Server.new(self, options[:host], options[:port])
     end
       
@@ -21,12 +22,23 @@ module God
       yield(w)
       
       # ensure the new watch has a unique name
-      if @watches[w.name]
-        abort "Duplicate Watch with name '#{w.name}'"
+      if @watches[w.name] || @groups[w.name]
+        abort "Watch name '#{w.name}' already used for a Watch or Group"
       end
       
       # add to list of watches
       @watches[w.name] = w
+      
+      # add to group if specified
+      if w.group
+        # ensure group name hasn't been used for a watch already
+        if @watches[w.group]
+          abort "Group name '#{w.group}' already used for a Watch"
+        end
+      
+        @groups[w.group] ||= []
+        @groups[w.group] << w.name
+      end
     end
     
     # Start monitoring any watches set to autostart
